--- a/index.html
+++ b/index.html
@@ -16,6 +16,73 @@
   </style>
 </head>
 <body>
+  <head>
+    <img src="images/logo.svg" alt="Logo">
+    <nav>
+      <div class="triangle"></div>
+      <input id="open-menu" type="checkbox">
+      <lable for="open-menu"><img id="hamburger-icon" src="images/icon-hamburger.svg" alt="Hamburger-icon"></lable>
+      <ul class="Menu">
+        <li><a class="fs-main-menu ls-main-menu" href="#">About</a></li>
+        <li><a class="fs-main-menu ls-main-menu" href="#">Services</a></li>
+        <li><a class="fs-main-menu ls-main-menu" href="#">Projects/a></li>
+        <li><a id="contact" href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <h1>We are creatives</h1>
+    <img src="images/icon-arrow-down.svg" alt="icon arrow down">
+  </head>
+  <main>
+    <section class="hero">
+      <div class="card" id="card-1"></div> <!--background-image only-->
+      <div class="card" id="card-2">
+        <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Transform your brand</h2>
+        <p class="fs-body-text-large ls-body-text-large fw-normal">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <a href="#" class="learn-more">learn more</a>
+      </div>
+      <div class="card" id="card-3"></div> <!--background-image only-->
+      <div class="card" id="card-4">
+        <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Stand out to the right audience</h2>
+        <p class="fs-body-text-large ls-body-text-large fw-normal">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
+        <a href="#" class="learn-more">learn more</a>
+      </div>
+      <div class="card" id="card-5">
+        <h3 class="fs-third-heading ls-third-heading fw-extra-bold fclr-fourth-heading">graphic design</h3>
+        <p class="fs-body-text-small ls-body-text-small fw-normal">
+          Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+        </p>
+      </div> 
+      <div class="card" id="card-6">
+        <h3 class="fs-third-heading ls-third-heading fw-extra-bold fclr-fourth-heading">Photography</h3>
+        <p class="fs-body-text-small ls-body-text-small fw-normal">
+          Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+        </p>
+      </div> 
+    </section>
+    <section class="testimonials">
+      <h4 class="fs-fourth-heading ls-fourth-heading fw-extra-bold fclr-fourth-heading">client testimonials</h4>
+      <div class="testimonial">
+        <img src="images/image-emily.jpg" alt="images of a witness" class="witness">
+        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <p class="ff-heading fs-witness-name ls-witness-name fw-extra-bold">Emily R.</p>
+        <p class="fs-witness-position ls-witness-position fw-extra-bold">marketing director</p>
+      </div>
+      <div class="testimonial">
+        <img src="images/image-thomas.jpg" alt="images of a witness" class="witness">
+        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p class="ff-heading fs-witness-name ls-witness-name fw-extra-bold">Thomas S.</p>
+        <p class="fs-witness-position ls-witness-position fw-extra-bold">chief operating Officer</p>
+      </div>
+      <div class="testimonial">
+        <img src="images/image-jennie.jpg" alt="images of a witness" class="witness">
+        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p class="ff-heading fs-witness-name ls-witness-name fw-extra-bold">Jennie F.</p>
+        <p class="fs-witness-position ls-witness-position fw-extra-bold">business owner</p>
+      </div>
+    </section>
+  </main>
+
+
   About
   Services
   Projects
