Main-seciton for mobile reday.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="stylesheet.css">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;900&family=Fraunces:opsz,wght@9..144,600;9..144,900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -34,52 +34,78 @@
   </head>
   <main>
     <section class="hero">
-      <div class="card" id="card-1"></div> <!--background-image only-->
+      <div class="card" id="card-1">
+        <img src="images/mobile/image-transform.jpg" alt="Egg on yellow background">
+      </div> 
       <div class="card" id="card-2">
         <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Transform your brand</h2>
-        <p class="fs-body-text-large ls-body-text-large fw-normal">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <a href="#" class="learn-more">learn more</a>
+        <p class="fs-body-text-large ls-body-text-large fw-normal fclr-body-text-hero">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <a href="#" class="learn-more fs-link-text ls-link-text fclr-secondary-heading fw-extra-bold">learn more</a>
       </div>
-      <div class="card" id="card-3"></div> <!--background-image only-->
+      <div class="card" id="card-3">
+        <img src="images/mobile/image-stand-out.jpg" alt="Lamp on red background">
+      </div> 
       <div class="card" id="card-4">
         <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Stand out to the right audience</h2>
-        <p class="fs-body-text-large ls-body-text-large fw-normal">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
-        <a href="#" class="learn-more">learn more</a>
-      </div>
+        <p class="fs-body-text-large ls-body-text-large fw-normal fclr-body-text-hero">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
+        <a href="#" class="learn-more fs-link-text ls-link-text fclr-secondary-heading fw-extra-bold">learn more</a>
+      </div>  
       <div class="card" id="card-5">
-        <h3 class="fs-third-heading ls-third-heading fw-extra-bold fclr-fourth-heading">graphic design</h3>
-        <p class="fs-body-text-small ls-body-text-small fw-normal">
-          Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-        </p>
+        <img src="images/mobile/image-graphic-design.jpg" alt="Red cherry on green background">
+        <div class="text">
+          <h3 class="fs-third-heading ls-third-heading fw-extra-bold fclr-fourth-heading">graphic design</h3>
+          <p class="fs-body-text-small ls-body-text-small fw-normal">
+            Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+          </p>
+        </div>
       </div> 
       <div class="card" id="card-6">
-        <h3 class="fs-third-heading ls-third-heading fw-extra-bold fclr-fourth-heading">Photography</h3>
-        <p class="fs-body-text-small ls-body-text-small fw-normal">
-          Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-        </p>
+        <img src="images/mobile/image-photography.jpg" alt="Orange on blue-ish background">
+        <div class="text">
+          <h3 class="fs-third-heading ls-third-heading fw-extra-bold fclr-fourth-heading">Photography</h3>
+          <p class="fs-body-text-small ls-body-text-small fw-normal">
+            Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+          </p>
+        </div>
       </div> 
     </section>
     <section class="testimonials">
       <h4 class="fs-fourth-heading ls-fourth-heading fw-extra-bold fclr-fourth-heading">client testimonials</h4>
       <div class="testimonial">
         <img src="images/image-emily.jpg" alt="images of a witness" class="witness">
-        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-        <p class="ff-heading fs-witness-name ls-witness-name fw-extra-bold">Emily R.</p>
-        <p class="fs-witness-position ls-witness-position fw-extra-bold">marketing director</p>
+        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body-text-testi">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <p class="witness-name fs-witness-name ls-witness-name fw-extra-bold">Emily R.</p>
+        <p class="witness-position fs-witness-position ls-witness-position fw-normal fclr-witness-position">marketing director</p>
       </div>
       <div class="testimonial">
         <img src="images/image-thomas.jpg" alt="images of a witness" class="witness">
-        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-        <p class="ff-heading fs-witness-name ls-witness-name fw-extra-bold">Thomas S.</p>
-        <p class="fs-witness-position ls-witness-position fw-extra-bold">chief operating Officer</p>
+        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body-text-testi">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p class="witness-name fs-witness-name ls-witness-name fw-extra-bold">Thomas S.</p>
+        <p class="witness-position fs-witness-position ls-witness-position fw-normal fclr-witness-position">chief operating Officer</p>
       </div>
       <div class="testimonial">
         <img src="images/image-jennie.jpg" alt="images of a witness" class="witness">
-        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-        <p class="ff-heading fs-witness-name ls-witness-name fw-extra-bold">Jennie F.</p>
-        <p class="fs-witness-position ls-witness-position fw-extra-bold">business owner</p>
+        <p class="testimonial-text fs-body-text-large ls-body-text-large fw-normal fclr-body-text-testi">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p class="witness-name fs-witness-name ls-witness-name fw-extra-bold">Jennie F.</p>
+        <p class="witness-position fs-witness-position ls-witness-position fw-normal fclr-witness-position">business owner</p>
       </div>
     </section>
+    <footer>
+      <div class="images">
+        <img src="images/mobile/image-gallery-milkbottles.jpg" alt="milkbottles">
+        <img src="images/mobile/image-gallery-orange.jpg" alt="Orange">
+        <img src="images/mobile/image-gallery-cone.jpg" alt="ice-cone">
+        <img src="images/mobile/image-gallery-sugar-cubes.jpg" alt="sugar-cubes">
+      </div>
+      <nav class="nav-footer">
+        <img src="images/logo-footer.svg" alt="logo dark-colored" class="footer-logo">
+        <div class="footer-menu">
+          <li><a class="fs-footer-menu ls-footer-menu" href="#">About</a></li>
+          <li><a class="fs-footer-menu ls-footer-menu" href="#">Services</a></li>
+          <li><a class="fs-footer-menu ls-footer-menu" href="#">Projects</a></li>
+        </div>
+      </nav>
+    </footer>
   </main>
 
 
