--- a/index.html
+++ b/index.html
@@ -36,18 +36,22 @@
       <div class="card" id="card-1">
         <img src="images/mobile/image-transform.jpg" alt="Egg on yellow background">
       </div> 
-      <div class="card" id="card-2">
-        <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Transform your brand</h2>
-        <p class="fs-body-text-large ls-body-text-large fw-normal fclr-body-text-hero">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <a href="#" class="learn-more fs-link-text ls-link-text fclr-secondary-heading fw-extra-bold">learn more</a>
+      <div class="card"  id="card-2">
+        <div>
+          <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Transform your brand</h2>
+          <p class="fs-body-text-large ls-body-text-large fw-normal fclr-body-text-hero">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+          <a href="#" class="learn-more fs-link-text ls-link-text fclr-secondary-heading fw-extra-bold">learn more</a>
+        </div>
       </div>
       <div class="card" id="card-3">
         <img src="images/mobile/image-stand-out.jpg" alt="Lamp on red background">
       </div> 
       <div class="card" id="card-4">
-        <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Stand out to the right audience</h2>
-        <p class="fs-body-text-large ls-body-text-large fw-normal fclr-body-text-hero">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
-        <a href="#" class="learn-more fs-link-text ls-link-text fclr-secondary-heading fw-extra-bold">learn more</a>
+        <div>
+          <h2 class="fs-secondary-heading ls-secondary-heading fw-extra-bold fclr-secondary-heading">Stand out to the right audience</h2>
+          <p class="fs-body-text-large ls-body-text-large fw-normal fclr-body-text-hero">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
+          <a href="#" class="learn-more fs-link-text ls-link-text fclr-secondary-heading fw-extra-bold">learn more</a>
+        </div>
       </div>  
       <div class="card" id="card-5">
         <img src="images/mobile/image-graphic-design.jpg" alt="Red cherry on green background">
@@ -116,5 +120,4 @@
   </div>
 </body>
 </html>
-
 
