--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
           <li><a class="fs-footer-menu ls-footer-menu" href="#">Projects</a></li>
         </div>
         <div class="social-icon-container">
-          <img src="images/icon-facebook.svg" alt="icon-facebook" class="social-icon">
-          <img src="images/icon-instagram.svg" alt="icon-instagram" class="social-icon">
-          <img src="images/icon-twitter.svg" alt="icon-twitter" class="social-icon">
-          <img src="images/icon-pinterest.svg" alt="icon-pinterest" class="social-icon">
+          <a href="#"><img src="images/icon-facebook.svg" alt="icon-facebook" class="social-icon"></a>
+          <a href="#"><img src="images/icon-instagram.svg" alt="icon-instagram" class="social-icon"></a>
+          <a href="#"><img src="images/icon-twitter.svg" alt="icon-twitter" class="social-icon"></a>
+          <a href="#"><img src="images/icon-pinterest.svg" alt="icon-pinterest" class="social-icon"></a>
         </div>
       </nav>
     </footer>
